--- a/_layouts/archive-project.html
+++ b/_layouts/archive-project.html
@@ -5,3 +5,10 @@ layout: default
 {% include home-header.html %}
 
 <h1>{{ page.title }}</h1>
+
+<div id="project-content">
+  {% capture project_content %}
+    {% include_relative adws2/project/main.md %}
+  {% endcapture %}
+  {{ project_content | markdownify }}
+</div>
