--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,7 @@ layout: default
   {{ about_content | markdownify }}
 </div>
 
+<!-- 
 <div class="posts">
   {% for post in paginator.posts %}
   <p>{{post}}</p>
@@ -50,4 +51,4 @@ layout: default
   {% else %}
     <span class="pagination-item newer">Newer</span>
   {% endif %}
-</div>
+</div> -->
