--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,15 +1,6 @@
 ---
-layout: default
+layout: archive-about
 ---
-
-{% include home-header.html %}
-
-<div id="about-content">
-  {% capture about_content %}
-    {% include_relative adws2/about/main.md %}
-  {% endcapture %}
-  {{ about_content | markdownify }}
-</div>
 
 <!-- 
 <div class="posts">
