--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -5,9 +5,15 @@ layout: default
 {% include home-header.html %}
 
 <ul>
-  {% for post in site.posts %}
+  {% for post in site.studies %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
+      <p>Published on: {{ post.date | date: "%B %-d, %Y" }}</p>
+      <p>Tags: 
+        {% for tag in post.tags %}
+          <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+        {% endfor %}
+      </p>
     </li>
   {% endfor %}
 </ul>
