--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -10,7 +10,8 @@ layout: default
   {% for post in site.studies %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <p>Published on: {{ post.date | date: "%B %-d, %Y" }}</p>
+      <img src="{{ post.image }}" alt="{{ post.title }}">
+      <p>{{ post.date | date: "%B %-d, %Y" }}</p>
       <p>Tags: 
         {% for tag in post.tags %}
           <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
