--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -10,8 +10,10 @@ layout: default
   {% for post in site.studies %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <img src="{{ post.image }}" alt="{{ post.title }}" style="width: 100px; height: auto;">
-      <p>{{ post.date | date: "%B %-d, %Y" }}</p>
+      {% if post.image %}
+        <img src="{{ post.image }}" alt="{{ post.title }}" style="width: 100px; height: auto;">
+      {% endif %}
+        <p>{{ post.date | date: "%B %-d, %Y" }}</p>
       <p>Tags: 
         {% for tag in post.tags %}
           <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
