--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -7,7 +7,8 @@ layout: default
 <h1>{{ page.title }}</h1>
 
 <ul>
-  {% for post in site.studies %}
+  {% assign sorted_posts = site.studies | sort: 'date' | reverse %}
+  {% for post in sorted_posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
       {% if post.image %}
