--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -8,13 +8,14 @@ layout: default
 
 <ul>
   {% assign sorted_posts = site.studies | sort: 'date' | reverse %}
-  {% for post in sorted_posts %}
+
+  {% for post in sorted_posts limit: per_page offset: start_index %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
       {% if post.image %}
         <img src="{{ post.image }}" alt="{{ post.title }}" style="width: 100px; height: auto;">
       {% endif %}
-        <p>{{ post.date | date: "%B %-d, %Y" }}</p>
+      <p>{{ post.date | date: "%B %-d, %Y" }}</p>
       <p>Tags: 
         {% for tag in post.tags %}
           <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
