--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -8,8 +8,7 @@ layout: default
 
 <ul>
   {% assign sorted_posts = site.studies | sort: 'date' | reverse %}
-
-  {% for post in sorted_posts limit: per_page offset: start_index %}
+  {% for post in sorted_posts limit: paginator.per_page offset: paginator.offset %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
       {% if post.image %}
@@ -24,3 +23,16 @@ layout: default
     </li>
   {% endfor %}
 </ul>
+
+<div class="pagination">
+  {% if paginator.next_page %}
+    <a class="pagination-item older" href="{{ paginator.next_page_path | relative_url }}">Older</a>
+  {% else %}
+    <span class="pagination-item older">Older</span>
+  {% endif %}
+  {% if paginator.previous_page %}
+    <a class="pagination-item newer" href="{{ paginator.previous_page_path | relative_url }}">Newer</a>
+  {% else %}
+    <span class="pagination-item newer">Newer</span>
+  {% endif %}
+</div>
