--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -4,6 +4,10 @@ layout: default
 
 {% include home-header.html %}
 
+<head>
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+</head>
+
 <h1>{{ page.title }}</h1>
 
 <ul>
