--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -3,10 +3,7 @@ layout: default
 ---
 
 {% include home-header.html %}
-
-<head>
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-</head>
+<link rel="stylesheet" href="{{ '/assets/styles.scss' | relative_url }}">
 
 <h1>{{ page.title }}</h1>
 
