--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -3,27 +3,32 @@ layout: default
 ---
 
 {% include home-header.html %}
+
 <link rel="stylesheet" href="{{ '/assets/styles.scss' | relative_url }}">
 
 <h1>{{ page.title }}</h1>
 
-<ul>
+<div class="posts-grid">
   {% assign sorted_posts = site.studies | sort: 'date' | reverse %}
   {% for post in sorted_posts limit: paginator.per_page offset: paginator.offset %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {% if post.image %}
-        <img src="{{ post.image }}" alt="{{ post.title }}" style="width: 100px; height: auto;">
-      {% endif %}
-      <p>{{ post.date | date: "%B %-d, %Y" }}</p>
-      <p>Tags: 
-        {% for tag in post.tags %}
-          <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
-        {% endfor %}
-      </p>
-    </li>
+    <div class="post-card">
+      <a href="{{ post.url }}">
+        {% if post.image %}
+          <img class="post-image" src="{{ post.image }}" alt="{{ post.title }}">
+        {% endif %}
+        <div class="post-content">
+          <h2>{{ post.title }}</h2>
+          <p>{{ post.date | date: "%B %-d, %Y" }}</p>
+          <p>Tags: 
+            {% for tag in post.tags %}
+              <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+            {% endfor %}
+          </p>
+        </div>
+      </a>
+    </div>
   {% endfor %}
-</ul>
+</div>
 
 <div class="pagination">
   {% if paginator.next_page %}
