--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -41,4 +41,16 @@ layout: default
   {% else %}
     <span class="pagination-item newer">Newer</span>
   {% endif %}
+  
+  <div class="page-numbers">
+    {% for page in (1..paginator.total_pages) %}
+      {% if page == paginator.page %}
+        <span class="current">{{ page }}</span>
+      {% else %}
+        <a href="{{ paginator.paginate_path | replace: ':num', page }}">{{ page }}</a>
+      {% endif %}
+    {% endfor %}
+  </div>
+</div>
+
 </div>
