--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -19,6 +19,7 @@ layout: default
         <div class="post-content">
           <h2>{{ post.title }}</h2>
           <p>{{ post.date | date: "%B %-d, %Y" }}</p>
+          <p>{{ post.content | strip_html | truncatewords: 50, '...' }}</p>
           <p>Tags: 
             {% for tag in post.tags %}
               <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
@@ -41,7 +42,7 @@ layout: default
   {% else %}
     <span class="pagination-item newer">Newer</span>
   {% endif %}
-  
+
   <div class="page-numbers">
     {% for page in (1..paginator.total_pages) %}
       {% if page == paginator.page %}
@@ -51,6 +52,4 @@ layout: default
       {% endif %}
     {% endfor %}
   </div>
-</div>
-
 </div>
