--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -12,21 +12,20 @@ layout: default
   {% assign sorted_posts = site.studies | sort: 'date' | reverse %}
   {% for post in sorted_posts limit: paginator.per_page offset: paginator.offset %}
     <div class="post-card">
-      <a href="{{ post.url }}">
-        {% if post.image %}
-          <img class="post-image" src="{{ post.image }}" alt="{{ post.title }}">
-        {% endif %}
-        <div class="post-content">
-          <h2>{{ post.title }}</h2>
-          <p>{{ post.date | date: "%B %-d, %Y" }}</p>
-          <p>{{ post.content | strip_html | truncatewords: 50, '...' }}</p>
-          <p>Tags: 
-            {% for tag in post.tags %}
-              <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
-            {% endfor %}
-          </p>
-        </div>
-      </a>
+      {% if post.image %}
+        <img class="post-image" src="{{ post.image }}" alt="{{ post.title }}">
+      {% endif %}
+      <div class="post-content">
+        <!-- 하이퍼링크를 제목에만 적용 -->
+        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+        <p>{{ post.date | date: "%B %-d, %Y" }}</p>
+        <p>{{ post.content | strip_html | truncatewords: 50, '...' }}</p>
+        <p>Tags: 
+          {% for tag in post.tags %}
+            <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+          {% endfor %}
+        </p>
+      </div>
     </div>
   {% endfor %}
 </div>
