--- a/_layouts/archive-taxonomies.html
+++ b/_layouts/archive-taxonomies.html
@@ -6,11 +6,12 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 
-{% comment %} Check the type of archive {% endcomment %}
+{% comment %} Check the type of archive and include study tags if applicable {% endcomment %}
 {%- if page.type == 'categories' -%}
   {%- assign taxonomies = site.categories -%}
 {%- elsif page.type == 'tags' -%}
-  {%- assign taxonomies = site.tags -%}
+  {%- assign study_tags = site.studies | map: 'tags' | flatten | uniq -%}
+  {%- assign taxonomies = site.tags | merge: study_tags -%}
 {%- else -%}
   {%- assign taxonomies = none -%}
 {%- endif -%}
