--- a/_includes/post-tags.html
+++ b/_includes/post-tags.html
@@ -10,7 +10,8 @@
 <div class="post-tags-section">
   <i class="post-tags-icon fas fa-tags"></i>
   <ul class="post-tags">
-    {%- for tag in page.tags -%}
+    {%- assign all_tags = page.tags | concat: site.studies_tags | uniq -%}
+    {%- for tag in all_tags -%}
       <li>
         {% assign slugified_tag = tag | slugify %}
         {%- if tags_archive_page -%}
