--- a/_layouts/archive-taxonomies.html
+++ b/_layouts/archive-taxonomies.html
@@ -11,7 +11,7 @@ layout: default
   {%- assign taxonomies = site.categories -%}
 {%- elsif page.type == 'tags' -%}
   {%- assign study_tags = site.studies | map: 'tags' | flatten | uniq -%}
-  {%- assign taxonomies = site.tags | merge: study_tags -%}
+  {%- assign taxonomies = site.tags | concat: study_tags | uniq -%}
 {%- else -%}
   {%- assign taxonomies = none -%}
 {%- endif -%}
@@ -36,13 +36,7 @@ layout: default
           <li>
             {%- capture link -%}{{ page.permalink }}#{{ slugified_taxonomy_name }}{%- endcapture -%}
             <a class="taxonomy" href="{{ link | relative_url }}">
-              <span>
-                {%- if page.type == 'tags' -%}
-                  {{ slugified_taxonomy_name }}
-                {%- else -%}
-                  {{ taxonomy_name }}
-                {%- endif -%}
-              </span>
+              <span>{{ slugified_taxonomy_name }}</span>
               <span class="taxonomy-count">{{ posts.size }}</span>
             </a>
           </li>
@@ -59,17 +53,11 @@ layout: default
     {%- assign slugified_taxonomy_name = taxonomy_name | slugify -%}
     {%- assign posts = taxonomy[1] -%}
     {%- if posts.size == i -%}
-      <h2 id="{{ slugified_taxonomy_name }}">
-        {%- if page.type == 'tags' -%}
-          {{ slugified_taxonomy_name }}
-        {%- else -%}
-          {{ taxonomy_name }}
-        {%- endif -%}
-      </h2>
+      <h2 id="{{ slugified_taxonomy_name }}">{{ slugified_taxonomy_name }}</h2>
       <ul class="post-list-by-taxonomy">
         {%- for post in posts -%}
           <li>
-            <time datetime="{{ page.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time> &raquo; <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time> &raquo; <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           </li>
         {%- endfor -%}
       </ul>
