--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -99,12 +99,12 @@
   background-color: #0056b3;
 }
 
-// .search-box {
-//   margin-bottom: 20px;
-// }
+.search-box {
+  margin-bottom: 20px;
+}
 
-// .search-box input {
-//   width: 100%;
-//   padding: 10px;
-//   font-size: 16px;
-// }
+.search-box input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+}
