--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -79,6 +79,32 @@ layout: default
   }
 </script>
 
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    function searchPosts() {
+      var input, filter, posts, title, i, txtValue;
+      input = document.getElementById("searchInput");
+      filter = input.value.toUpperCase();
+      posts = document.getElementById("postsGrid").getElementsByClassName("post-card");
+
+      for (i = 0; i < posts.length; i++) {
+        title = posts[i].getElementsByTagName("h2")[0];
+        if (title) {
+          txtValue = title.textContent || title.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            posts[i].style.display = "";
+          } else {
+            posts[i].style.display = "none";
+          }
+        }       
+      }
+    }
+
+    var searchInput = document.getElementById("searchInput");
+    searchInput.addEventListener('keyup', searchPosts);
+  });
+</script>
+
 <!-- <script>
   var password = prompt('비밀번호를 입력하세요:');
   if (password !== '1234') {
