--- a/_layouts/archive-taxonomies.html
+++ b/_layouts/archive-taxonomies.html
@@ -10,7 +10,8 @@ layout: default
 {%- if page.type == 'categories' -%}
   {%- assign taxonomies = site.categories -%}
 {%- elsif page.type == 'tags' -%}
-  {%- assign taxonomies = site.studies | map: 'tags' | flatten | uniq -%}  {# 스터디 태그만을 사용 #}
+  {%- assign study_tags = site.studies | map: 'tags' | flatten | uniq -%}
+  {%- assign taxonomies = site.tags | merge: study_tags -%}
 {%- else -%}
   {%- assign taxonomies = none -%}
 {%- endif -%}
@@ -35,7 +36,13 @@ layout: default
           <li>
             {%- capture link -%}{{ page.permalink }}#{{ slugified_taxonomy_name }}{%- endcapture -%}
             <a class="taxonomy" href="{{ link | relative_url }}">
-              <span>{{ slugified_taxonomy_name }}</span>
+              <span>
+                {%- if page.type == 'tags' -%}
+                  {{ slugified_taxonomy_name }}
+                {%- else -%}
+                  {{ taxonomy_name }}
+                {%- endif -%}
+              </span>
               <span class="taxonomy-count">{{ posts.size }}</span>
             </a>
           </li>
@@ -52,11 +59,17 @@ layout: default
     {%- assign slugified_taxonomy_name = taxonomy_name | slugify -%}
     {%- assign posts = taxonomy[1] -%}
     {%- if posts.size == i -%}
-      <h2 id="{{ slugified_taxonomy_name }}">{{ slugified_taxonomy_name }}</h2>
+      <h2 id="{{ slugified_taxonomy_name }}">
+        {%- if page.type == 'tags' -%}
+          {{ slugified_taxonomy_name }}
+        {%- else -%}
+          {{ taxonomy_name }}
+        {%- endif -%}
+      </h2>
       <ul class="post-list-by-taxonomy">
         {%- for post in posts -%}
           <li>
-            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time> &raquo; <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+            <time datetime="{{ page.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time> &raquo; <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           </li>
         {%- endfor -%}
       </ul>
