--- a/_includes/post-tags.html
+++ b/_includes/post-tags.html
@@ -10,6 +10,7 @@
 <div class="post-tags-section">
   <i class="post-tags-icon fas fa-tags"></i>
   <ul class="post-tags">
+    {% assign page = site.studies | sort: 'date' | reverse %}
     {%- for tag in page.tags -%}
       <li>
         {% assign slugified_tag = tag | slugify %}
