--- a/_layouts/archive-study.html
+++ b/_layouts/archive-study.html
@@ -25,11 +25,9 @@ layout: default
         <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
         <p>{{ post.date | date: "%B %-d, %Y" }}</p>
         <p>{{ post.content | strip_html | truncatewords: 50, '...' }}</p>
-        <p>Tags: 
-          {% for tag in post.tags %}
-            <a href="/tags/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
-          {% endfor %}
-        </p>
+        {% if post.tags %}
+        {% include post-tags.html %}
+        {% endif %}
       </div>
     </div>
   {% endfor %}
